spacing issue for name in forum

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@ nav {
     float: left;
     margin-right: 10px;
     margin-top: -35px;
+    margin-bottom: 35px;
 }
 
 nav ul {
